# M2_H08

./: README.md  pyproject.toml
data/: quotes.json
m02_h08_example/: app.py  config.py  connect_mongoengine.py  models.py  test_connect.py
m02_h08_first/: app.py  db_commands.py  docs.py
m2_h08_second/: consumer_email.py  consumer_sms.py  fake_generator.py  models.py  producer.py
