[tool.poetry]
name = "m02-h08-example"
version = "0.1.0"
description = ""
authors = ["Dmytro Filin <dmitriy.fillin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.5.0"
redis = "^5.0.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
